<resources>
    <string name="app_name">Learning</string>
    <string name="topping">Topping</string>
    <string name="quantity">Quantity</string>

    <string name="cream" translatable="false">Whipped Cream</string>
    <string name="chocolate" translatable="false">Chocolate</string>

    <string name="add" translatable="false">+</string>
    <string name="minus" translatable="false">-</string>

    <string name="order_summary" translatable="false">Order Summary</string>
    <string name="order" translatable="false">order</string>
    <string name="zero" translatable="false">0</string>

</resources>
