<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/activity_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
       >
        <EditText
            android:id="@+id/name_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Type Your Name"
            android:layout_marginBottom="20dp"
            android:inputType="text" />

        <TextView
            style="@style/headerTextStyle"
            android:text="@string/topping"

            />
        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cream"
            android:layout_marginBottom="10dp"
            />
        <CheckBox
            android:id="@+id/checkbox_chocholate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chocolate"
            android:layout_marginBottom="10dp"
            />

        <TextView
            style="@style/headerTextStyle"
            android:text="@string/quantity"

            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:text="@string/add"
                android:onClick="increment"
                />
            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/zero"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                />
            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin= "8dp"
                android:text="@string/minus"
                android:onClick="decrement"
                />
        </LinearLayout>

        <TextView
            style="@style/headerTextStyle"

            android:text="@string/order_summary"
            />
        <TextView
            android:id="@+id/order_summary_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:layout_margin="16dp"
            android:textColor="@android:color/black"

            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/order"
            android:onClick="submitOrder"
            />

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            ads:adSize="BANNER"
            android:layout_height="wrap_content"
            ads:adUnitId="ca-app-pub-3835778305944450/9078088918">
        </com.google.android.gms.ads.AdView>

    </LinearLayout>
</ScrollView>